pictures sliding on mobile, have to fix margin on pictures at 965

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -35,6 +35,9 @@ body {
   background-repeat: no-repeat;
   background-position: center;
 }
+
+
+
 .best-gear {
   height: 100px;
   border: 1px solid black;
@@ -50,12 +53,12 @@ body {
   height: 300px;
   border: 1px solid black;
   overflow:hidden;
-}
+
+  }
 .pictures {
   @include media($mobile) {
     height: 300px;
-    width: 33.5%;
-    margin-right: -1%;
+    width: 100%;
   }
 
   //@include span-columns(4);//
@@ -93,4 +96,39 @@ body {
   text-align: center;
   font-size: 20px;
   font-family: "arial";
+}
+figure {
+@include media($desktop) {
+  width: 100%;
+  margin-left: 0%;
+  margin-right: 0%;
+  margin-top: 0%;
+}
+}
+//I have no idea how this is doing what it is doing //
+@include media($mobile) {
+      @keyframes slidy {
+      0% { left: 0%; }
+      20% { left: 0%; }
+      25% { left: -100%; }
+      45% { left: -100%; }
+      50% { left: -200%; }
+      70% { left: -200%; }
+      75% { left: -300%; }
+      95% { left: -300%; }
+      100% { left: -400%; }
+      }
+
+      body { margin: 0; }
+      div#slider { overflow: hidden; }
+      div#slider figure img { width: 20%; float: left; }
+      div#slider figure {
+        position: relative;
+        width: 500%;
+        margin: 0;
+        left: 0;
+        text-align: left;
+        font-size: 0;
+        animation: 13s slidy infinite;
+}
 }
